# vertexenum

./: .gitignore  CHANGELOG.md  README.md  cabal.config  stack.yaml  vertexenum.cabal  vertexenum.code-workspace
.github/: README.md
.github/workflows/: Stack-lts-Mac.yml  Stack-lts.yml  Stack-nightly.yml  Stack.yml
C/: halfspaces.c
essais/: Examples.hs
src/Geometry/: VertexEnum.hs
src/Geometry/VertexEnum/: CVertexEnum.hs  Constraint.hs  Examples.hs  Internal.hs  LinearCombination.hs  VertexEnum.hs
tests/: Approx.hs  Main.hs
